--- a/index.html
+++ b/index.html
@@ -12,7 +12,48 @@
 </head>
 <body>
 
-    <h1>hello world</h1>
+  <div class="age">
+    <div class="age__icon">
+      <img class="age__img" src="./img/icon-arrow.svg" alt="Icon" width="44" height="44">
+    </div>
+    <div class="age__form form">
+      <div class="form__group">
+        <label class="form__label" for="form__day">Day</label>
+        <input id="form__day" class="form__input " type="text" placeholder="DD" required>
+        <span id="form__err--day"  class="form__err--text"></span>
+      </div>
+
+      <div class="form__group">
+        <label class="form__label" for="form__day">Month</label>
+        <input id="form__month" class="form__input" type="text" placeholder="MM" required>
+        <span id="form__err--month" class="form__err--text"></span>
+      </div>
+
+      <div class="form__group">
+        <label class="form__label" for="form__day">Day</label>
+        <input id="form__year" class="form__input" type="text" placeholder="YYYY" required>
+        <span id="form__err--year" class="form__err--text"></span>
+      </div>
+    </div>
+
+    <div class="age__info">
+      <div class="age__console">
+        <span id="age__console--years" class="age__descripton">--</span>
+        <span class="age__text">years</span>
+      </div>
+
+      <div class="age__console">
+        <span id="age__console--months" class="age__descripton">--</span>
+        <span class="age__text">months</span>
+      </div>
+
+      <div class="age__console">
+        <span id="age__console--days" class="age__descripton">--</span>
+        <span class="age__text">days</span>
+      </div>
+    </div>
+  </div>
+
   <script src="/js/index.js"></script>
 </body>
 </html>
